Stop nav being opened by default on mobile

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: flex-end;
 
+  .menu-button.menu-opened {
+    height: fit-content;
+  }
+
   .main-nav {
     padding: 10px 20px;
     border: 0 solid $white;
