--- a/src/assets/sass/components/_mobile.scss
+++ b/src/assets/sass/components/_mobile.scss
@@ -30,6 +30,7 @@
       &:focus {
         color: $black;
         background: $white;
+        border-color: $black;
       }
     }
 
